Updated index HTML outline / fixed other page names

--- a/index.html
+++ b/index.html
@@ -13,34 +13,62 @@
 
         <header>
 
-            <selection id="navbutton">
+            <section id="navbutton">
                 <button class="nav-toggle">☰</button>
 
                 <aside class="sidebar">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="music.html">Music</a></li>
-                        <li><a href="tour.html">Tour</a></li>
+                        <li><a href="tickets.html">Tour</a></li>
                         <li><a href="store.html">Store</a></li>
                         <li><a href="update.html">Keep updated!</a></li>
                     </ul>
-                </aside>    
-                </selection>    
-            </selection>
+                </aside>       
+            </section>
 
-            <h1>all under heaven</h1>
-
-            <img src="images/auhlukeivanovich-1024x682.jpg" alt="all under heaven band pic">
+            
         </header>
 
         <main>
+            <h1>all under heaven</h1>
 
+            <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="all under heaven band pic">
+
+            <h2> What Lies Ahead of Me</h2>
+
+            <section id="indexLN">
+                <a href="https://dthw.sh/whatliesaheadofme" class="indexButton" target="_blank">LISTEN NOW</button>
+            </section>
+
+            <img src="images/AUH_Poster.png" alt="AUH summer 2025 tour poster">
+
+            <section id="indexTOUR">
+                <a href="tickets.html" class="indexButton">TICKETS</a>
+            </section>
+
+            <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/ONZwMJW44Qg?si=EQ7GKf0QTuPCPfWH" title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
         </main>
 
     </body>
 
     <footer>
+        <div class="footerTop">
+            <nav class="footerLinks">
+                <a href="contact.html">Contact Us</a>
+                <a href="returns.html">Returns</a>
+                <a href="shipping.html">Shipping</a>
+            </nav>
 
+            <nav class="footerSocials">
+                <a href="https://www.instagram.com/allunderhvn/"><img src="instagram-icon.svg" alt="Instagram" target="_blank"></a>
+            </nav>
+        </div>
     </footer>
 
 </html>
