--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
 
         <header>
 
-            <selection id="navbutton">
+            <section id="navbutton">
                 <button class="nav-toggle">☰</button>
 
                 <aside class="sidebar">
@@ -24,9 +24,8 @@
                         <li><a href="store.html">Store</a></li>
                         <li><a href="update.html">Keep updated!</a></li>
                     </ul>
-                </aside>    
-                </selection>    
-            </selection>
+                </aside>       
+            </section>
         </header>
 
         <main>
