--- a/tickets.html
+++ b/tickets.html
@@ -13,7 +13,7 @@
 
         <header>
 
-            <selection id="navbutton">
+            <section id="navbutton">
                 <button class="nav-toggle">☰</button>
 
                 <aside class="sidebar">
@@ -25,8 +25,7 @@
                         <li><a href="update.html">Keep updated!</a></li>
                     </ul>
                 </aside>    
-                </selection>    
-            </selection>
+            </section>
         </header>
 
         <main>
