--- a/update.html
+++ b/update.html
@@ -13,7 +13,7 @@
 
          <header>
 
-            <selection id="navbutton">
+            <section id="navbutton">
                 <button class="nav-toggle">☰</button>
 
                 <aside class="sidebar">
@@ -24,13 +24,12 @@
                         <li><a href="store.html">Store</a></li>
                         <li><a href="update.html">Keep updated!</a></li>
                     </ul>
-                </aside>    
-                </selection>    
-            </selection>
+                </aside>     
+            </section>
         </header>
 
         <main>
-            <h2>checking </h2>
+        
         </main>
 
     </body>
