--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
             </nav>
 
             <nav class="footerSocials">
-                <a href="https://www.instagram.com/allunderhvn/"><img src="instagram-icon.svg" alt="Instagram" target="_blank"></a>
+                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
+                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
+            </nav>
+        </div>
+
+        <div class="footerBottom">
+            <p>© 2025 All Under Heaven</p>
+            <nav class="legalLinks">
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="shipping.html">Shipping Policy</a>
+                <a href="returns.html">Returns</a>
+                <a href="contact.html">Contact Info</a>
+                <a href="tos.html">Terms of Service</a>
             </nav>
         </div>
     </footer>
