--- a/store.html
+++ b/store.html
@@ -20,7 +20,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="music.html">Music</a></li>
-                        <li><a href="tour.html">Tour</a></li>
+                        <li><a href="tickets.html">Tour</a></li>
                         <li><a href="store.html">Store</a></li>
                         <li><a href="update.html">Keep updated!</a></li>
                     </ul>
@@ -35,7 +35,29 @@
     </body>
 
     <footer>
+        <div class="footerTop">
+            <nav class="footerLinks">
+                <a href="contact.html">Contact Us</a>
+                <a href="returns.html">Returns</a>
+                <a href="shipping.html">Shipping</a>
+            </nav>
 
+            <nav class="footerSocials">
+                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
+                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
+            </nav>
+        </div>
+
+        <div class="footerBottom">
+            <p>© 2025 All Under Heaven</p>
+            <nav class="legal-links">
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="shipping.html">Shipping Policy</a>
+                <a href="returns.html">Returns</a>
+                <a href="contact.html">Contact Info</a>
+                <a href="tos.html">Terms of Service</a>
+            </nav>
+        </div>
     </footer>
 
 </html>
