Added a parmeter to the end of the stye.css ref to push updates

--- a/music.html
+++ b/music.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>listen to us - all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css?v=1">
     </head>
 
     <body>
@@ -50,7 +50,7 @@
 
         <div class="footerBottom">
             <p>© 2025 All Under Heaven</p>
-            <nav class="legal-links">
+            <nav class="legalLinks">
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="shipping.html">Shipping Policy</a>
                 <a href="returns.html">Returns</a>
