Kept messing with some css stuff / working on hamburger nav buttion

--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
         <link rel="stylesheet" href="style.css?v=1">
     </head>
 
-    <body>
+    <body class="indexBody">
 
         <header>
+            <nav role="navigation">
+                <div id="menuToggle">
 
-            <section id="navbutton">
-                <button class="nav-toggle">☰</button>
+                    <input type="checkbox" id="menuCheckbox" />
 
-                <aside class="sidebar">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="music.html">Music</a></li>
-                        <li><a href="tickets.html">Tour</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        <li><a href="update.html">Keep updated!</a></li>
-                    </ul>
-                </aside>       
-            </section>
+                    <span></span>
+                    <span></span>
+                    <span></span>   
 
+                        <ul id="menu">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="music.html">Music</a></li>
+                            <li><a href="tickets.html">Tour</a></li>
+                            <li><a href="store.html">Store</a></li>
+                            <li><a href="update.html">Keep updated!</a></li>
+                        </ul>     
+                </div>
+            </nav>
             
         </header>
 
-        <main>
+        <main class="indexMain">
             <h1>all under heaven</h1>
 
-            <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="all under heaven band pic">
-
-            <h2> What Lies Ahead of Me</h2>
-
-            <section id="indexLN">
-                <a href="https://dthw.sh/whatliesaheadofme" class="indexButton" target="_blank">LISTEN NOW</button>
+            <section id="indexAlbum">
+                <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="all under heaven band pic">
+                <h2> What Lies Ahead of Me</h2>
+                <a href="https://dthw.sh/whatliesaheadofme" class="indexButton" target="_blank">LISTEN NOW</a>
             </section>
 
-            <img src="images/AUH_Poster.png" alt="AUH summer 2025 tour poster">
-
             <section id="indexTOUR">
+                <img src="images/AUHflyer.jpeg" alt="AUH summer 2025 tour poster">
                 <a href="tickets.html" class="indexButton">TICKETS</a>
             </section>
 
