Worked on more CSS mainly on index / some nav bar

--- a/music.html
+++ b/music.html
@@ -12,20 +12,25 @@
     <body>
 
         <header>
+            <nav role="navigation">
+                <div id="menuToggle">
 
-            <section id="navbutton">
-                <button class="nav-toggle">☰</button>
+                    <input type="checkbox" id="menuCheckbox" />
 
-                <aside class="sidebar">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="music.html">Music</a></li>
-                        <li><a href="tickets.html">Tour</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        <li><a href="update.html">Keep updated!</a></li>
-                    </ul>
-                </aside>       
-            </section>
+                    <span></span>
+                    <span></span>
+                    <span></span>   
+
+                        <ul id="menu">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="music.html">Music</a></li>
+                            <li><a href="tickets.html">Tour</a></li>
+                            <li><a href="store.html">Store</a></li>
+                            <li><a href="update.html">Keep updated!</a></li>
+                        </ul>     
+                </div>
+            </nav>
+            
         </header>
 
         <main>
