--- a/index.html
+++ b/index.html
@@ -34,25 +34,36 @@
         </header>
 
         <main class="indexMain">
-            <h1>all under heaven</h1>
+            <h1>ALL UNDER HEAVEN</h1>
 
             <section id="indexAlbum">
                 <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="all under heaven band pic">
-                <h2> What Lies Ahead of Me</h2>
+                <div id="albumName">
+                    <div><h2>WHAT LIES</h2></div>
+                    <div><h2>AHEAD OF ME</h2></div>
+                </div>
+                <div id="listenButton">
                 <a href="https://dthw.sh/whatliesaheadofme" class="indexButton" target="_blank">LISTEN NOW</a>
+                </div>
             </section>
 
             <section id="indexTOUR">
+                <div id="poster">
                 <img src="images/AUHflyer.jpeg" alt="AUH summer 2025 tour poster">
+                </div>
+                <div id="ticketButton">
                 <a href="tickets.html" class="indexButton">TICKETS</a>
+                </div>
             </section>
 
-            <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/ONZwMJW44Qg?si=EQ7GKf0QTuPCPfWH" title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
+            <div class="indexVideo">
+                <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/ONZwMJW44Qg?si=EQ7GKf0QTuPCPfWH" title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+            </div>
         </main>
 
     </body>
