Finished 1st version of music page (HTML/CSS)

--- a/music.html
+++ b/music.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>listen to us - all under heaven</title>
+        <title>music - all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css?v=3">
+        <link rel="stylesheet" href="style.css?v=5">
     </head>
 
-    <body>
+    <body class="musicBody">
 
         <header>
             <nav role="navigation">
@@ -34,7 +34,46 @@
         </header>
 
         <main>
+            <div class="pageTitle">
+            <h1>ALL UNDER HEAVEN</h1>
+            </div>
 
+            <section class="featuredRelease">
+                <img src="images/auh-highCover.jpg" alt="AUH / High. Cover">
+                <div class="featuredButton">
+                    <div class="featuredText">
+                        <h2>ALL UNDER HEAVEN / HIGH.</h2>
+                    </div>
+                    <a href="https://dthw.sh/allunderheavenhigh" class="featuredLink" target="_blank">CLICK TO STREAM</a>
+                </div>
+            </section>
+
+            <section class="albumGrid">
+
+                <div class="albumCard">
+                    <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="What Lies Ahead of Me Cover">
+                    <p class="albumTitle">What Lies Ahead of Me</p>
+                    <a href="https://linktr.ee/allunderheaven" class="streamLink" target="_blank">CLICK TO STREAM</a>
+                </div>
+
+                <div class="albumCard">
+                    <img src="images/auh-lt-glareCover.jpg" alt="AUH / Leaving Time / Glare Cover">
+                    <p class="albumTitle">Split</p>
+                    <a href="https://linktr.ee/allunderheaven" class="streamLink" target="_blank">CLICK TO STREAM</a>
+                </div>
+
+                <div class="albumCard">
+                    <img src="images/dsa2acCover.jpg" alt="DSA 2 / Alley Cat Cover">
+                    <p class="albumTitle">Don't Suffer Alone / Alley Cat</p>
+                    <a href="https://linktr.ee/allunderheaven" class="streamLink" target="_blank">CLICK TO STREAM</a>
+                </div>
+
+                <div class="albumCard">
+                    <img src="images/colliderCover.jpg" alt="Collider Cover">
+                    <p class="albumTitle">Collider</p>
+                    <a href="https://linktr.ee/allunderheaven" class="streamLink" target="_blank">CLICK TO STREAM</a>
+                </div>  
+            </section>
         </main>
 
     </body>
