--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css?v=4">
+        <link rel="stylesheet" href="style.css?v=5">
     </head>
 
     <body class="indexBody">
@@ -34,7 +34,10 @@
         </header>
 
         <main class="indexMain">
+
+            <div class="pageTitle">
             <h1>ALL UNDER HEAVEN</h1>
+            </div>
 
             <section id="indexAlbum">
                 <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="all under heaven band pic">
