Added tickets page (HTML/CSS) / Overhauled some CSS on whole page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css?v=5">
+        <link rel="stylesheet" href="style.css?v=6">
     </head>
 
-    <body class="indexBody">
+    <body class="bodyBackground">
 
         <header>
             <nav role="navigation">
@@ -42,8 +42,7 @@
             <section id="indexAlbum">
                 <img src="images/AllUnderHeaven-WhatLiesAheadOfMe-Cover_2000x.jpg" alt="all under heaven band pic">
                 <div id="albumName">
-                    <div><h2>WHAT LIES</h2></div>
-                    <div><h2>AHEAD OF ME</h2></div>
+                    <div><h2>WHAT LIES AHEAD OF ME</h2></div>                  
                 </div>
                 <div id="listenButton">
                 <a href="https://dthw.sh/whatliesaheadofme" class="indexButton" target="_blank">LISTEN NOW</a>
@@ -52,10 +51,10 @@
 
             <section id="indexTOUR">
                 <div id="poster">
-                <img src="images/AUHflyer.jpeg" alt="AUH summer 2025 tour poster">
+                    <img src="images/AUHflyer.jpeg" alt="AUH summer 2025 tour poster">
                 </div>
                 <div id="ticketButton">
-                <a href="tickets.html" class="indexButton">TICKETS</a>
+                    <a href="tickets.html" class="indexButton">TICKETS</a>
                 </div>
             </section>
 
