--- a/tickets.html
+++ b/tickets.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>about us - all under heaven</title>
+        <title>tickets - all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css?v=3">
     </head>
 
-    <body>
+    <body class="bodyBackground">
 
         <header>
             <nav role="navigation">
@@ -34,7 +34,133 @@
         </header>
 
         <main>
+            <div class="pageTitle">
+            <h1>ALL UNDER HEAVEN</h1>
+            </div>
 
+            <section class="tourTickets">
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 20th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Rockwell</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Boston, MA</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.seetickets.us/event/all-under-heaven/644158" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 21st, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Trans Pecos</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Brooklyn, NY</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://tickets.venuepilot.com/e/7pm-all-under-heaven-high-nodding-off-2025-06-21-trans-pecos-ridgewood-queens-d71135" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 22nd, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Warehouse on Watts</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Philadelphia, PA</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.etix.com/ticket/p/69425962/all-under-heaven-philadelphia-warehouse-on-watts-cambridge-hall" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 25th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Funhouse Mr Smalls</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Pittsburgh, PA</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.ticketmaster.com/event/1600627982A9121A" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 26th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Brass Rail</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Fort Wayne, IN</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://brassrailfw.ticketleap.com/all-under-heaven/" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 27th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Gman Tavern</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Chicago, IL</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.etix.com/ticket/p/82704398" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 28th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Gaze At The Moon Fest</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Milwaukee, WI</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.etix.com/ticket/p/86915389/gaze-at-tha-moon-2025-cudahy-xray-arcade" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>June 29th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Ace of Cups</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Columbus, OH</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.seetickets.us/event/all-under-heaven-at-ace-of-cups/644174" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+            </section>
         </main>
 
     </body>
