--- a/music.html
+++ b/music.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css?v=5">
     </head>
 
-    <body class="musicBody">
+    <body class="bodyBackground">
 
         <header>
             <nav role="navigation">
