--- a/privacy.html
+++ b/privacy.html
@@ -22,11 +22,11 @@
                     <span></span>   
 
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="music.html">Music</a></li>
-                            <li><a href="tickets.html">Tour</a></li>
-                            <li><a href="store.html">Store</a></li>
-                            <li><a href="update.html">Keep updated!</a></li>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="music.html">MUSIC</a></li>
+                            <li><a href="tickets.html">TOUR</a></li>
+                            <li><a href="store.html">STORE</a></li>
+                            <li><a href="update.html">STAY UP TO DATE</a></li>
                         </ul>     
                 </div>
             </nav>
