--- a/tickets.html
+++ b/tickets.html
@@ -22,11 +22,11 @@
                     <span></span>   
 
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="music.html">Music</a></li>
-                            <li><a href="tickets.html">Tour</a></li>
-                            <li><a href="store.html">Store</a></li>
-                            <li><a href="update.html">Keep updated!</a></li>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="music.html">MUSIC</a></li>
+                            <li><a href="tickets.html">TOUR</a></li>
+                            <li><a href="store.html">STORE</a></li>
+                            <li><a href="update.html">STAY UP TO DATE</a></li>
                         </ul>     
                 </div>
             </nav>
@@ -157,6 +157,21 @@
                     </div>
                     <div class="tourLinkBorder">
                         <a href="https://www.seetickets.us/event/all-under-heaven-at-ace-of-cups/644174" class="tourLink" target="_blank">TICKETS</a>
+                    </div>
+                </div>
+
+                <div class="tourBorder">
+                    <div class="tourDates">
+                        <p>August 12th, 2025</p>
+                    </div>
+                    <div class="tourVenue">
+                        <p>Crossroads</p>
+                    </div>
+                    <div class="tourLocation">
+                        <p>Garwood, NJ</p>
+                    </div>
+                    <div class="tourLinkBorder">
+                        <a href="https://www.eventbrite.com/e/rival-schools-at-crossroads-w-all-under-heaven-high-tickets-1375107626929" class="tourLink" target="_blank">TICKETS</a>
                     </div>
                 </div>
 
