Added JS and learned about shaders / Really switched up sidebar design / Overall update to the site including content

--- a/product.html
+++ b/product.html
@@ -29,9 +29,9 @@
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="music.html">MUSIC</a></li>
                             <li><a href="tickets.html">TOUR</a></li>
-                            <li><a href="store.html">STORE</a></li>
-                            <li><a href="update.html">STAY UP TO DATE</a></li>
-                        </ul>     
+                            <li><a href="https://auhnj.square.site/" target="_blank">STORE</a></li>
+                            <li><a href="https://all-under-heaven.kit.com/dc9f53c274" target="_blank">STAY UP TO DATE</a></li>
+                        </ul>         
                 </div>
             </nav>
             
