Major CSS/Design Overhaul AGAIN

--- a/update.html
+++ b/update.html
@@ -7,33 +7,44 @@
         <title>notifications - all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css?v=3">
+        <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
     </head>
 
-    <body>
+    <body class="bodyBackground">
 
         <header>
             <div class="pageTitle">
             <h1>ALL UNDER HEAVEN</h1>
             </div>
 
-            <nav role="navigation">
-                <div id="menuToggle">
+             <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" id="menuCheckbox" />
 
-                    <input type="checkbox" id="menuCheckbox" />
+          <span></span>
+          <span></span>
+          <span></span>
 
-                    <span></span>
-                    <span></span>
-                    <span></span>   
-
-                        <ul id="menu">
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="music.html">MUSIC</a></li>
-                            <li><a href="tickets.html">TOUR</a></li>
-                            <li><a href="https://auhnj.square.site/" target="_blank">STORE</a></li>
-                            <li><a href="https://all-under-heaven.kit.com/dc9f53c274" target="_blank">STAY UP TO DATE</a></li>
-                        </ul>     
-                </div>
-            </nav>
+          <div id="menu">
+            <div id="flameCanvas"></div>
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="music.html">MUSIC</a></li>
+              <li><a href="tickets.html">TOUR</a></li>
+              <li>
+                <a href="https://auhnj.square.site/" target="_blank">STORE</a>
+              </li>
+              <li>
+                <a
+                  href="https://all-under-heaven.kit.com/dc9f53c274"
+                  target="_blank"
+                  >STAY UP TO DATE</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
             
         </header>
 
