--- a/product.html
+++ b/product.html
@@ -7,6 +7,7 @@
         <title>product details - all under heaven</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css?v=3">
+        <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
     </head>
 
     <body class="bodyBackground">
