CSS Tweaks / Template HTML and text added  for all footer pages

--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
 
         <header>
             <div class="pageTitle">
-            <h1>ALL UNDER HEAVEN</h1>
+            <h1 class="noisyText">ALL UNDER HEAVEN</h1>
             </div>
 
             <nav role="navigation">
@@ -44,6 +44,8 @@
             </div>
             <script src="product.js"></script>
         </main>
+
+        <script src="fog.js"></script>
             
     </body>
 
