Minor CSS tweaks

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
         <header>
             <div class="pageTitle">
-            <h1>ALL UNDER HEAVEN</h1>
+            <h1 class="noisyText">ALL UNDER HEAVEN</h1>
             </div>
 
              <nav role="navigation">
@@ -28,7 +28,7 @@
 
           <div id="menu">
             <div id="flameCanvas"></div>
-            <ul>
+            <ul class="noisyText">
               <li><a href="index.html">HOME</a></li>
               <li><a href="music.html">MUSIC</a></li>
               <li><a href="tickets.html">TOUR</a></li>
@@ -63,7 +63,7 @@
             </div>
 
             <div id="contactEmail">
-              <h2>contact@allunderhvn.com</h2>
+              <h2>updates@allunderhvn.com</h2>
             </div>
 
           </section>
