--- a/tickets.html
+++ b/tickets.html
@@ -26,7 +26,7 @@
 
             <div id="menu">
               <div id="flameCanvas"></div>
-              <ul>
+              <ul class="noisyText">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="music.html">MUSIC</a></li>
                 <li><a href="tickets.html">TOUR</a></li>
