--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>all under heaven</title>
     <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css?v=9" />
+    <link rel="stylesheet" href="style.css?v=10" />
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
   </head>
 
@@ -25,7 +25,7 @@
 
           <div id="menu">
             <div id="flameCanvas"></div>
-            <ul>
+            <ul class="noisyText">
               <li><a href="index.html">HOME</a></li>
               <li><a href="music.html">MUSIC</a></li>
               <li><a href="tickets.html">TOUR</a></li>
